--- a/Projeto 2 Testes/Projeto2.ipynb
+++ b/Projeto 2 Testes/Projeto2.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "to                         78.0                      43.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -257,9 +257,6 @@
     "            negativosVerdadeiro+=1\n",
     "        else:\n",
     "            negativosFalso+=1\n",
-    "            \n",
-    "        \n",
-    "        \n",
     "        \n",
     "print(\"Positivo Falso: {}, {}%\".format(positivosFalso,(positivosFalso/2)))\n",
     "print(\"Positivo Verdadeiro: {}, {}%\".format(positivosVerdadeiro,(positivosVerdadeiro/2)))\n",
@@ -269,11 +266,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusão\n",
+    "\n",
+    "A partir das medidas mostradas acima, conlui-se que o classificador é bom, visto que mais de 80% dos tweets estão entre os verdadeiros, e apenas 12% entre os falsos. Ou seja, dentre os tweets que classificamos \"manualmente\", o classificador obteve a mesma classificação em 88% dos casos. É curioso notar que, entre os 12% dos tweets que houveram dvergência entre nós e o classificador, 83%, ou seja, 20 tweets, são de irrelevantes. Um motivo que explica isso é que um tweet que classificamos como irrelevante pode conter palavras relevantes. Nestes casos, o classificador marcará como relevante por conter tais palavras, mesmo que seja irrelevante. Outro motivo é que o tweet pode estar muito pequeno e conter palavras relevantes. Assim, o tweet será classificadao como relevante, mesmo que não seja. Por exemplo, no tweet \"@gristy07 @uguna_ps4 @moonjuicetv @silentkilla562 thats what they tell me \", após ser limpado, sobram apenas as palavras \"thats what they tell me\". Estas podem ter sido classificadas como palavras relevantes, fazendo com que o tweet seja classificado como relevante. Entretanto, a frase foi classificada como irrelevante por nós apesar de ter palavras relevantes.\n",
+    "\n",
+    "As mensagens com sarcasmo não são classificadas de forma diferente. Isto ocorre pois o classificador não entende o significado da palavra. Ele apenas checa se ela é relevante ou não. Já as palavras com dupla negação tambem são classificadas da mesma forma pois como a probabilidade de cada palavra ser relevante ou não é multiplicada por todas as palavras da frase, não importa a posição que esta palavra ocupa. Consequentemente, uma dupla negação é ignorada. Por exemplo, em um possível tweet \"I ain't got no time to play PS4\",em que há a dupla negação, esta teria a mesma probabilidade que a frase \"No. I ain't got time to play PS4\".   \n",
+    "\n",
+    "Como um futuro plano de expansão, planejamos aumentar o número de tweets na base de dados \"treinamento\", fazendo com que mais palavras sejam classificadas entre relevantes e irrelevantes, aumentando assim a eficiência do classificador."
+   ]
   }
  ],
  "metadata": {
